--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "docs:preview": "vitepress preview"
   },
   "dependencies": {
-    "@catppuccin/vitepress": "^0.1.2",
     "vitepress": "^1.6.4"
+  },
+  "devDependencies": {
+    "@catppuccin/vitepress": "^0.1.2"
   }
 }
