--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "docs:preview": "vitepress preview"
   },
   "dependencies": {
-    "vitepress": "^1.6.4"
+    "vitepress": "^1.6.4",
+    "vitepress-protect-plugin": "^1.0.6"
   },
   "devDependencies": {
     "@catppuccin/vitepress": "^0.1.2"
